--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@ body {
 }
 
 body:after {
-  content  : "ciao coglioncelli";
+  content  : "effettuando prove";
+  color    : yellow;
   font-size: 50px;
 }
