--- a/src/style.scss
+++ b/src/style.scss
@@ -1,15 +1,68 @@
-@import url("https://fonts.googleapis.com/css?family=Karla:weight@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
 
-$font: "Karla", sans-serif;
-$primary-color: #3e6f9e;
+$colors: (
+  primary: #005DFF
+);
 
-body {
-  font-family: $font;
-  color      : $primary-color;
+@function color($color) {
+  @return map-get($colors, $color);
 }
 
-body:after {
-  content  : "effettuando prove";
-  color    : yellow;
-  font-size: 50px;
+* {
+  margin    : 0;
+  padding   : 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+
+  .background {
+    clip-path       : polygon(0 0, 100% 0%, 100% 72%, 0 100%);
+    background-color: color(primary);
+    width           : 100%;
+    height          : 100%;
+    z-index         : -1;
+    position        : absolute;
+  }
+}
+
+.main {
+  height               : 100%;
+  padding              : 50px;
+  text-align           : center;
+  display              : grid;
+  grid-template-columns: auto;
+  grid-template-rows   : 2fr 5fr 1fr;
+
+  .header {
+    padding-top: 20px;
+    color      : white;
+
+    img {
+      width: 100px;
+    }
+  }
+
+  .main__info {
+    padding-top: 50px;
+    font-size  : 1.5em;
+    color      : white;
+  }
+
+  .main__footer {
+    position: absolute;
+    bottom  : 10px;
+    right   : 10px;
+  }
+}
+
+.main__footer h3 {
+  font-size: 2em;
+  color    : color(primary);
 }
