--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&family=Montserrat&display=swap');
 
-$colors: (
-  primary: #005DFF
-);
-
-@function color($color) {
-  @return map-get($colors, $color);
-}
+$primary: #005DFF;
+$button-bg-color: #949494;
+$background: #f5f6fa;
+$text: #9c9c9c;
+$input-bg-color: #fff;
+$input-text-color: #a3a3a3;
+$button-text-color: #fff;
 
 * {
   margin    : 0;
@@ -23,8 +23,8 @@ body {
   font-family: 'Montserrat', sans-serif;
 
   .background {
-    clip-path       : polygon(0 0, 100% 0%, 100% 72%, 0 100%);
-    background-color: color(primary);
+    clip-path       : polygon(0 0, 100% 0, 100% 87%, 21% 100%, 0 100%);
+    background-color: $primary;
     width           : 100%;
     height          : 100%;
     z-index         : -1;
@@ -49,6 +49,52 @@ body {
     }
   }
 
+  .btn {
+    font-size     : 0.6em;
+    text-transform: uppercase;
+    display       : inline-block;
+    background    : transparent;
+    border        : 0;
+    outline       : 0;
+    padding       : 0;
+    transition    : all 200ms ease-in;
+    cursor        : pointer;
+
+    &--primary {
+      background   : $button-bg-color;
+      color        : $button-text-color;
+      box-shadow   : 0 0 10px 2px rgba(0, 0, 0, .1);
+      border-radius: 2px;
+      padding      : 10px 23px;
+
+      &:hover {
+        background: lighten($button-bg-color, 10%);
+      }
+
+      &:active {
+        background: darken($button-bg-color, 10%);
+        box-shadow: inset 0 0 10px 2px rgba(0, 0, 0, .2);
+      }
+    }
+
+    &--inside {
+      margin-left: -70px;
+    }
+  }
+
+  .form {
+    &__field {
+      width     : 250px;
+      background: #fff;
+      color     : $input-text-color;
+      font      : inherit;
+      box-shadow: 0 6px 10px 0 rgba(0, 0, 0 , .1);
+      border    : 0;
+      outline   : 0;
+      padding   : 15px 13px;
+    }
+  }
+
   .main__info {
     padding-top: 50px;
     font-size  : 1.5em;
@@ -56,13 +102,27 @@ body {
   }
 
   .main__footer {
-    position: absolute;
-    bottom  : 10px;
-    right   : 10px;
-  }
-}
+    display              : grid;
+    grid-template-columns: 1fr 1fr;
 
-.main__footer h3 {
-  font-size: 2em;
-  color    : color(primary);
+    span {
+      background-color: white;
+      padding         : 5px;
+      font-size       : 1.5em;
+      border-radius   : 50%;
+      color           : $primary;
+      position        : absolute;
+      bottom          : 10px;
+      left            : 20px;
+    }
+
+    h3 {
+      font-family: 'Do Hyeon', sans-serif;
+      position   : absolute;
+      bottom     : 10px;
+      right      : 15px;
+      font-size  : 1.5em;
+      color      : $primary;
+    }
+  }
 }
